fix: update background colors and text colors for better visibility in content section

--- a/static/css/teacher-dashboard.css
+++ b/static/css/teacher-dashboard.css
@@ -35,7 +35,7 @@ main > section{
 } */
 
 .content {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-200);
     display: flex;
     flex-direction: column;
     padding: 0.7rem 1rem;
@@ -43,13 +43,13 @@ main > section{
     & > .activity-type{
         font-family: 'Light-Poppins';
         font-size: 0.8rem;
-        color: rgb(0, 0, 0);
+        color: var(--white-text);
         margin-bottom: auto;
     }
     & > .activity-name{
         font-family: 'Bold-Poppins';
         font-size: 1.3rem;
-        color: rgb(0, 0, 0);
+        color: var(--white-text);
     }
 
     & > .content-button-action-container{
@@ -63,15 +63,18 @@ main > section{
             border: none;
             height: 30px;
             border-radius: 100px;
-            background: white;
+            background: var(--accent-color-almond);
             font-family: 'Regular-Poppins';
             font-size: 0.9rem;
+            color: var(--primary-color-700);
+            transition: transform 0.2s ease;
         }
 
         & > .delete-button{
             grid-row-start: 2; 
             grid-column: 1 / 3;
-
+            background: var(--danger-color);
+            color: var(--white-text);
         }
         
 
@@ -87,12 +90,22 @@ main > section{
                 padding-top: 0.13rem;
                 text-align: center;
                 font-size: 0.86rem;
-                font-family: 'Regular-Poppins';
+                font-family: 'Light-Poppins';
             }
 
         }
+    button:hover {
+        transform: scale(1.05);
+    }
+
+    .delete-button:hover{
+        transform: scale(1.05);
+    }
+    
     }
 }
+
+
 
 #add-content-button {
     background-color: var(--accent-color-orange);
